--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "t29-RN-theme",
+	"name": "t29theme",
 	"version": "0.0.1",
 	"description": "T29 Custom React Native Template",
 	"repository": "git@github.com:three29/t29-RN-theme.git",
